--- a/spring-restful-webservice/pom.xml
+++ b/spring-restful-webservice/pom.xml
@@ -9,13 +9,16 @@
 	</parent>
 
 	<groupId>org.jason</groupId>
-	<artifactId>spring-restful-webservice</artifactId>
+	<artifactId>spring-restful</artifactId>
 	<version>1.0</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
+
+	<name>Spring restful demo by jason</name>
+	<url>http://www.jason-zhang.org</url>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<start-class>org.jason.restful.Application</start-class>
+		<start-class>org.jason.config.WarApplication</start-class>
 	</properties>
 
 	<dependencies>
@@ -24,11 +27,29 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		
+		<dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
+          <scope>provided</scope>
+        </dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sourceforge.nekohtml</groupId>
+			<artifactId>nekohtml</artifactId>
+			<version>1.9.21</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -38,6 +59,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
 			</plugin>
 		</plugins>
 	</build>
