--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 	
 	<modules>
 		<module>jason-util</module>
-		<module>spring-restful-webservice</module>
+		<module>spring-restful</module>
 	</modules>
 	
 	<build>
