--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 	<modules>
 		<module>jason-util</module>
 		<module>spring-restful</module>
+                <module>spring-websocket</module>
 	</modules>
 	
 	<build>
