--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<module>spring-restful-hibernate</module>
 		<module>spring-mvc</module>
                 <module>spring-websocket</module>
-		<module>jason-application</module>
+		<module>jason-product</module>
 		<module>java-explore</module>
                 <module>spring-restful-web-application-demo</module>
                 <module>jsf-helloworld</module>
