[Common] - Fix pom dependencies management

--- a/jason-util/pom.xml
+++ b/jason-util/pom.xml
@@ -9,6 +9,8 @@
 
 	<artifactId>jason-util</artifactId>
 
+	<name>Jason Util</name>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
