[Jason Code Challenge] - Add code challenge to module list

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 	
 	<modules>
 		<module>jason-util</module>
+		<module>jason-code-challenge</module>
 		<module>spring-restful</module>
 		<module>spring-restful-hibernate</module>
 		<module>spring-mvc</module>
