--- a/java-explore/pom.xml
+++ b/java-explore/pom.xml
@@ -42,17 +42,26 @@
 			<groupId>org.jason</groupId>
 			<artifactId>jason-util</artifactId>
 			<version>1.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>jaxme</groupId>
+					<artifactId>jaxme-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		 <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
-        </dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
-			<version>2.3.2</version>
+			<version>2.3.1</version>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
