--- a/java-explore/pom.xml
+++ b/java-explore/pom.xml
@@ -64,6 +64,12 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>Saxon-HE</artifactId>
+			<version>9.9.1-6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
