--- a/pom.xml
+++ b/pom.xml
@@ -38,28 +38,28 @@
 		<powermock.version>1.4.10</powermock.version>
 		<junit-version>4.12</junit-version>
 	</properties>
-	
+
 	<modules>
 		<module>jason-util</module>
 		<module>jason-code-challenge</module>
 		<module>spring-restful</module>
 		<module>spring-restful-hibernate</module>
 		<module>spring-mvc</module>
-                <module>spring-websocket</module>
+		<module>spring-websocket</module>
 		<module>jason-product</module>
 		<module>java-explore</module>
-                <module>jsf-helloworld</module>
+		<module>jsf-helloworld</module>
 	</modules>
-	
+
 	<build>
 		<plugins>
-<plugin>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-compiler-plugin</artifactId>
-  <version>3.8.0</version>
-</plugin>
-    </plugins>
-        </build>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+			</plugin>
+		</plugins>
+	</build>
 
 
 	<dependencyManagement>
@@ -70,18 +70,24 @@
 				<version>${junit-version}</version>
 				<scope>test</scope>
 			</dependency>
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito</artifactId>
-			<version>${powermock.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-module-junit4</artifactId>
-			<version>${powermock.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-api-mockito</artifactId>
+				<version>${powermock.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-module-junit4</artifactId>
+				<version>${powermock.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>28.2-jre</version>
+				<type>bundle</type>
+			</dependency>
+		</dependencies>
 	</dependencyManagement>
 </project>
