--- a/jason-util/pom.xml
+++ b/jason-util/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jason</groupId>
 		<artifactId>parent-pom</artifactId>
-		<version>1.0</version>
+		<version>2.0</version>
 	</parent>
 
 	<artifactId>jason-util</artifactId>
@@ -14,9 +14,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
+			<version>2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
