--- a/java-explore/pom.xml
+++ b/java-explore/pom.xml
@@ -114,6 +114,40 @@
 			<version>2.10.3</version>
 		</dependency>
 
+		<!-- Java FX -->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-web</artifactId>
+			<version>13</version>
+		</dependency>
+
+
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20190722</version>
+		</dependency>
+
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.2</version>
+		</dependency>
+<!-- 
+		<dependency>
+			<groupId>javafx</groupId>
+			<artifactId>jfxrt</artifactId>
+			<version>11</version>
+			<scope>system</scope>
+			<systemPath>${java.home}/lib/jfxrt.jar</systemPath>
+		</dependency> -->
+
 	</dependencies>
 
 	<build>
@@ -122,6 +156,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.4</version>
+				<configuration>
+					<!-- <mainClass>org.jason.javafx.HelloJavaFX</mainClass> -->
+					<mainClass>org.jason.javafx.WebViewerDemo</mainClass>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
