--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<powermock.version>1.4.10</powermock.version>
 		<junit-version>4.12</junit-version>
+		<log4j2.version>2.13.1</log4j2.version>
 	</properties>
 
 	<modules>
@@ -70,6 +71,12 @@
 				<version>${junit-version}</version>
 				<scope>test</scope>
 			</dependency>
+
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+			</dependency>
+
 			<dependency>
 				<groupId>org.powermock</groupId>
 				<artifactId>powermock-api-mockito</artifactId>
