--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 
 	<groupId>org.jason</groupId>
 	<artifactId>parent-pom</artifactId>
-	<version>2.0</version>
+	<version>2.1</version>
 	<packaging>pom</packaging>
 
 	<description>Some defaults for Maven builds</description>
-	<url>it@github.com:JasonZ-Git/JasonTechnology.git</url>
+	<url>git@github.com:JasonZ-Git/JasonTechnology.git</url>
 	<licenses>
 		<license>
 			<name>The Apache License, Version 2.0</name>
@@ -38,6 +38,7 @@
 		<powermock.version>1.4.10</powermock.version>
 		<junit-version>4.12</junit-version>
 		<log4j2.version>2.13.1</log4j2.version>
+		<project.version>2.1</project.version>
 	</properties>
 
 	<modules>
@@ -75,6 +76,7 @@
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
+				<version>${log4j2.version}</version>
 			</dependency>
 
 			<dependency>
