--- a/spring-mvc/pom.xml
+++ b/spring-mvc/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.jason</groupId>
 	<artifactId>SpringMVC</artifactId>
 	<packaging>war</packaging>
-	<version>2.0-SNAPSHOT</version>
+	<version>2.1</version>
 	<name>SpringMVC Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
