--- a/jason-product/pom.xml
+++ b/jason-product/pom.xml
@@ -17,9 +17,6 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<start-class>org.jason.config.JarApplication</start-class>
-		<hibernate.version>4.3.6.Final</hibernate.version>
-		<mysql.connector.version>5.1.31</mysql.connector.version>
-		<joda-time.version>2.3</joda-time.version>
 		<spring.boot.mainclass>org.jason.spider.mydeal.application.MydealApplication</spring.boot.mainclass>
 	</properties>
 
@@ -81,7 +78,6 @@
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.11.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -90,13 +86,12 @@
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty</artifactId>
-			<version>6.1.5</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jason</groupId>
 			<artifactId>jason-util</artifactId>
-			<version>2.0</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
@@ -104,12 +99,22 @@
 			<artifactId>mockito-core</artifactId>
 		</dependency>
 
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Selenium is only used for Google Dictionary Project -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>htmlunit-driver</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
