--- a/java-explore/pom.xml
+++ b/java-explore/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>1.8</java.version>
 		<start-class>org.jason.restful.Application</start-class>
 		<jaxb.version>2.3.2</jaxb.version>
-		<seleniumhq.version>2.37.0</seleniumhq.version>
+		<seleniumhq.version>3.141.59</seleniumhq.version>
 	</properties>
 
 	<dependencies>
@@ -44,22 +44,18 @@
 			<artifactId>guava</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>net.sourceforge.htmlunit</groupId>
-			<artifactId>htmlunit</artifactId>
-			<version>2.37.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>htmlunit-driver</artifactId>
 			<scope>test</scope>
-			<version>${seleniumhq.version}</version>
+			<version>2.38.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>${seleniumhq.version}</version>
+			<artifactId>selenium-server</artifactId>
+			<version>3.141.59</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -70,12 +66,6 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-server</artifactId>
-			<version>3.141.59</version>
-			<scope>test</scope>
-		</dependency>
 
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
@@ -83,8 +73,12 @@
 			<version>${jaxb.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-runner</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.jason</groupId>
@@ -139,14 +133,9 @@
 			<artifactId>xalan</artifactId>
 			<version>2.7.2</version>
 		</dependency>
-<!-- 
-		<dependency>
-			<groupId>javafx</groupId>
-			<artifactId>jfxrt</artifactId>
-			<version>11</version>
-			<scope>system</scope>
-			<systemPath>${java.home}/lib/jfxrt.jar</systemPath>
-		</dependency> -->
+		<!-- <dependency> <groupId>javafx</groupId> <artifactId>jfxrt</artifactId> 
+			<version>11</version> <scope>system</scope> <systemPath>${java.home}/lib/jfxrt.jar</systemPath> 
+			</dependency> -->
 
 	</dependencies>
 
