--- a/jason-product/pom.xml
+++ b/jason-product/pom.xml
@@ -115,6 +115,12 @@
 			<artifactId>selenium-server</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
