--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,12 @@
 				<artifactId>selenium-server</artifactId>
 				<version>3.141.59</version>
 			</dependency>
+
+			<dependency>
+				<groupId>com.jayway.jsonpath</groupId>
+				<artifactId>json-path</artifactId>
+				<version>2.4.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
