--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<module>spring-restful</module>
 		<module>spring-restful-hibernate</module>
 		<module>spring-mvc</module>
-		<module>spring-websocket</module>
+		<!-- <module>spring-websocket</module> -->
 		<module>jason-product</module>
 		<module>java-explore</module>
 		<module>jsf-helloworld</module>
