--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 
 	<groupId>org.jason</groupId>
 	<artifactId>parent-pom</artifactId>
-	<version>2.1</version>
+	<version>2.2</version>
 	<packaging>pom</packaging>
 
-	<description>Some defaults for Maven builds</description>
+	<description>Jason POM</description>
 	<url>git@github.com:JasonZ-Git/JasonTechnology.git</url>
 	<licenses>
 		<license>
@@ -40,7 +40,7 @@
 		<junit-version>5.6.0</junit-version>
 		<junit-platform-runner-version>1.6.0</junit-platform-runner-version>
 		<log4j2.version>2.13.1</log4j2.version>
-		<project.version>2.1</project.version>
+		<project.version>2.2</project.version>
         <springboot.version>2.2.5.RELEASE</springboot.version>
         <hibernate.version>5.4.18.Final</hibernate.version>
 	</properties>
@@ -70,6 +70,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.jason</groupId>
+				<artifactId>jason-util</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-engine</artifactId>
