[Jason Product] - Add Default Page for the products

--- a/jason-product/yeeyi-spider/pom.xml
+++ b/jason-product/yeeyi-spider/pom.xml
@@ -27,8 +27,14 @@
 			<artifactId>jason-util</artifactId>
 			<version>2.3</version>
 		</dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
