--- a/jason-code-challenge/pom.xml
+++ b/jason-code-challenge/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jason</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>2.2</version>
+        <version>2.3</version>
     </parent>
 
     <artifactId>jason-code-challenge</artifactId>
@@ -31,11 +31,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>maven</groupId>
@@ -65,6 +60,16 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
         </dependency>
     </dependencies>
 </project>
