--- a/jason-product/jason-dictionary-translation/pom.xml
+++ b/jason-product/jason-dictionary-translation/pom.xml
@@ -13,16 +13,15 @@
 
 	<groupId>org.jason</groupId>
 	<artifactId>jason-dictionary-translation</artifactId>
-	<version>1.6</version>
+	<version>2.0</version>
 
 	<properties>
-		<java.version>1.8</java.version>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
+		<java.version>11</java.version>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
 	</properties>
 
 	<dependencies>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -37,16 +36,16 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-hal-explorer</artifactId>
 		</dependency>
-		
+
 		<dependency>
-  			<groupId>org.springframework.boot</groupId>
-  			<artifactId>spring-boot-starter-validation</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-		
+
 		<dependency>
-  			<groupId>io.springfox</groupId>
-  			<artifactId>springfox-boot-starter</artifactId>
-  			<version>3.0.0</version>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 
 		<dependency>
@@ -58,7 +57,6 @@
 		<dependency>
 			<groupId>org.jason</groupId>
 			<artifactId>jason-util</artifactId>
-			<version>2.4</version>
 		</dependency>
 
 		<!-- <Start> Used for remote google translation -->
@@ -69,12 +67,10 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-server</artifactId>
-			<version>3.141.59</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.11.3</version>
 		</dependency>
 		<!-- <End> Used for remote google translation -->
 
@@ -83,6 +79,17 @@
 			<artifactId>log4j-core</artifactId>
 		</dependency>
 	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jason</groupId>
+				<artifactId>parent-pom</artifactId>
+				<version>3.3</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
