[Dictionary] - Working version - api gateway -> lambda -> sns -> lambda -> sns -> lambda

--- a/jason-product/dictionary-read-aws/pom.xml
+++ b/jason-product/dictionary-read-aws/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.jason</groupId>
 	<artifactId>dictionary-read-aws</artifactId>
-	<version>2.0.0</version>
+	<version>2.2.0</version>
 
 	<build>
 		<plugins>
@@ -79,6 +79,10 @@
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-sqs</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-sns</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
