--- a/jason-product/dictionary-get-google-translation-python/serverless.yaml
+++ b/jason-product/dictionary-get-google-translation-python/serverless.yaml
@@ -4,23 +4,16 @@ provider:
   name: aws
   runtime: python3.6
   region: ap-southeast-2
-  timeout: 30
+  timeout: 40
   iam:
     role: arn:aws:iam::052752173794:role/LambdaExecutionWithCloudWatch
 
 functions:
-  sender:
+  dispatcher:
     memorySize: 512
-    handler: googleTranslationHandler.translate
+    handler: handler.main
     events:
-      - sqs:arn:aws:sqs:ap-southeast-2:052752173794:NewWordQueue
-      - sqs:
-          arn:
-            Fn::GetAtt:
-              - TestWordQueue
-              - Arn
-          batchSize: 1
-          maximumBatchingWindow: 60
+      - sns:arn:aws:sns:ap-southeast-2:052752173794:NewWordTopic
 
     layers:
       - arn:aws:lambda:ap-southeast-2:052752173794:layer:chrome_driver_57:1
