--- a/jason-product/dictionary-update-aws/pom.xml
+++ b/jason-product/dictionary-update-aws/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.jason</groupId>
 	<artifactId>dictionary-update-aws</artifactId>
-	<version>2.1.0</version>
+	<version>2.2.0</version>
 
 	<build>
 		<plugins>
@@ -74,6 +74,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-lambda</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-dynamodb</artifactId>
 		</dependency>
 		<dependency>
@@ -81,10 +85,14 @@
 			<artifactId>aws-java-sdk-sqs</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -94,9 +102,9 @@
 			<artifactId>log4j-core</artifactId>
 		</dependency>
 		<dependency>
-           <groupId>org.apache.logging.log4j</groupId>
-           <artifactId>log4j-slf4j-impl</artifactId>
-       </dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
