[SpringCloud] - Gateway configure

--- a/playground/eureka-gateway-config-demo/spring-cloud-config-server/pom.xml
+++ b/playground/eureka-gateway-config-demo/spring-cloud-config-server/pom.xml
@@ -5,13 +5,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.2</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
 	<groupId>org.jason</groupId>
-	<artifactId>spring-cloud-gateway-eureka-hello</artifactId>
+	<artifactId>spring-cloud-config-server-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-cloud-gateway-hello</name>
-	<description>Demo For Spring Cloud Gateway</description>
+	<name>spring-cloud-config-server-demo</name>
+	<description>Demo For Spring Cloud Config Server</description>
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.0</spring-cloud.version>
@@ -19,11 +19,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-gateway</artifactId>
+			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
