--- a/playground/eureka-gateway-config-demo/pom.xml
+++ b/playground/eureka-gateway-config-demo/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>spring-cloud-parent-pom</artifactId>
     <packaging>pom</packaging>
 
-    <name>ms-parent</name>
+    <name>cloud-demo-parent</name>
     <description>Parent Pom</description>
     
     <modules>
@@ -15,5 +15,7 @@
         <module>eureka-book-service</module>
         <module>eureka-user-service</module>
         <module>spring-cloud-gateway</module>
+        <module>spring-cloud-config</module>
+        <module>spring-cloud-config-server</module>
     </modules>
 </project>
